Fix minor issues with the start page
* Header was too large on mobile device
* Partners images were not readable on green background

--- a/papers/static/style/mobile.css
+++ b/papers/static/style/mobile.css
@@ -1,6 +1,9 @@
 /* small screen fixes */
 
-#content { min-width: 300px; }
+
+#header, #content, #subfooter, #footer {
+    min-width: 300px;
+}
 
 #header .navbar .navbar-nav {
     flex-direction: column;
